--- a/src/App.css
+++ b/src/App.css
@@ -31,9 +31,16 @@
   to { transform: rotate(360deg); }
 }
 
-.box{
+.todo{
   background-color: mintcream;
   border: 1px solid #333;
   width:300px;
   padding:25px;
+  overflow:hidden;
+}
+
+.List{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
